// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`section-title > renders defaults 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"section-title"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m"section-title__title-container"[39m
    [36m>[39m
      [36m<h2[39m
        [33mclass[39m=[32m"section-title__title"[39m
        [33mid[39m=[32m"s0-title"[39m
      [36m>[39m
        [0mTodays Best Deals[0m
      [36m</h2>[39m
      [36m<span[39m
        [33mclass[39m=[32m"section-title__subtitle"[39m
      [36m>[39m
        [0mwith free shipping![0m
      [36m</span>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`section-title > renders icon and see all 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"section-title"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m"section-title__title-container"[39m
    [36m>[39m
      [36m<h2[39m
        [33mclass[39m=[32m"section-title__title"[39m
        [33mid[39m=[32m"s0-0-title"[39m
      [36m>[39m
        [0mToday's Deals - All With Free Shipping[0m
      [36m</h2>[39m
      [36m<span[39m
        [33mclass[39m=[32m"section-title__subtitle"[39m
      [36m>[39m
        [0mPlus, guaranteed best prices.[0m
      [36m</span>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m"section-title__info"[39m
    [36m>[39m
      [36m<button[39m
        [33mclass[39m=[32m"icon-btn"[39m
        [33mdata-ebayui[39m=[32m""[39m
        [33mdata-marko[39m=[32m"{\\"onclick\\":\\"handleClick s0-0-6-1 false\\",\\"onkeydown\\":\\"handleKeydown s0-0-6-1 false\\",\\"onfocus\\":\\"handleFocus s0-0-6-1 false\\",\\"onblur\\":\\"handleBlur s0-0-6-1 false\\"}"[39m
        [33mtype[39m=[32m"button"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--16"[39m
          [33mdata-marko-key[39m=[32m"@svg s0-0-6-1-1-2-0"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs[39m
            [33mdata-marko-key[39m=[32m"@defs s0-0-6-1-1-2-0"[39m
          [36m>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-heart-16"[39m
              [33mviewBox[39m=[32m"0 0 16 16"[39m
            [36m>[39m
              [36m<path[39m
                [33mclip-rule[39m=[32m"evenodd"[39m
                [33md[39m=[32m"M8 2.536a6.136 6.136 0 0 0-1.448-1.053A4.409 4.409 0 0 0 4.5 1c-1.55 0-2.709.634-3.461 1.554C.31 3.443 0 4.55 0 5.5c0 .918.348 1.711.704 2.292.36.586.77 1.023.978 1.237 4.193 4.327 4.91 5.011 5.624 5.691a.996.996 0 0 0 1.388 0c.714-.68 1.43-1.364 5.624-5.69a7.23 7.23 0 0 0 .978-1.238c.356-.58.704-1.374.704-2.292 0-.95-.312-2.057-1.039-2.946C14.21 1.634 13.05 1 11.5 1c-.625 0-1.311.107-2.052.483-.48.244-.96.588-1.448 1.053Zm-.778 2.093c-.635-.753-1.155-1.15-1.574-1.362A2.412 2.412 0 0 0 4.5 3c-.95 0-1.541.366-1.914.82A2.73 2.73 0 0 0 2 5.5c0 .415.161.842.409 1.246.245.398.535.711.71.891 2.97 3.065 4.183 4.289 4.881 4.974.698-.685 1.912-1.91 4.882-4.974.174-.18.464-.493.71-.891.247-.404.408-.83.408-1.246a2.73 2.73 0 0 0-.586-1.68C13.04 3.367 12.45 3 11.5 3c-.375 0-.739.06-1.148.267-.42.213-.94.609-1.574 1.362a.998.998 0 0 1-1.208.274.994.994 0 0 1-.348-.274Z"[39m
                [33mfill-rule[39m=[32m"evenodd"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-heart-16"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</button>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m"section-title__cta"[39m
    [36m>[39m
      [36m<a[39m
        [33mhref[39m=[32m"https://www.ebay.com"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"section-title__cta-text"[39m
        [36m>[39m
          [0mSee All[0m
        [36m</span>[39m
      [36m</a>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`section-title > renders icon and see all and no subtitle 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"section-title"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m"section-title__title-container"[39m
    [36m>[39m
      [36m<h2[39m
        [33mclass[39m=[32m"section-title__title"[39m
        [33mid[39m=[32m"s0-0-title"[39m
      [36m>[39m
        [0mToday's Deals - All With Free Shipping[0m
      [36m</h2>[39m
      [36m<span[39m
        [33mclass[39m=[32m"section-title__subtitle"[39m
      [36m>[39m
        [0mPlus, guaranteed best prices.[0m
      [36m</span>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m"section-title__info"[39m
    [36m>[39m
      [36m<button[39m
        [33mclass[39m=[32m"icon-btn"[39m
        [33mdata-ebayui[39m=[32m""[39m
        [33mdata-marko[39m=[32m"{\\"onclick\\":\\"handleClick s0-0-6-1 false\\",\\"onkeydown\\":\\"handleKeydown s0-0-6-1 false\\",\\"onfocus\\":\\"handleFocus s0-0-6-1 false\\",\\"onblur\\":\\"handleBlur s0-0-6-1 false\\"}"[39m
        [33mtype[39m=[32m"button"[39m
      [36m>[39m
        [36m<svg[39m
          [33maria-hidden[39m=[32m"true"[39m
          [33mclass[39m=[32m"icon icon--16"[39m
          [33mdata-marko-key[39m=[32m"@svg s0-0-6-1-1-2-0"[39m
          [33mfocusable[39m=[32m"false"[39m
        [36m>[39m
          [36m<defs[39m
            [33mdata-marko-key[39m=[32m"@defs s0-0-6-1-1-2-0"[39m
          [36m>[39m
            [36m<symbol[39m
              [33mid[39m=[32m"icon-heart-16"[39m
              [33mviewBox[39m=[32m"0 0 16 16"[39m
            [36m>[39m
              [36m<path[39m
                [33mclip-rule[39m=[32m"evenodd"[39m
                [33md[39m=[32m"M8 2.536a6.136 6.136 0 0 0-1.448-1.053A4.409 4.409 0 0 0 4.5 1c-1.55 0-2.709.634-3.461 1.554C.31 3.443 0 4.55 0 5.5c0 .918.348 1.711.704 2.292.36.586.77 1.023.978 1.237 4.193 4.327 4.91 5.011 5.624 5.691a.996.996 0 0 0 1.388 0c.714-.68 1.43-1.364 5.624-5.69a7.23 7.23 0 0 0 .978-1.238c.356-.58.704-1.374.704-2.292 0-.95-.312-2.057-1.039-2.946C14.21 1.634 13.05 1 11.5 1c-.625 0-1.311.107-2.052.483-.48.244-.96.588-1.448 1.053Zm-.778 2.093c-.635-.753-1.155-1.15-1.574-1.362A2.412 2.412 0 0 0 4.5 3c-.95 0-1.541.366-1.914.82A2.73 2.73 0 0 0 2 5.5c0 .415.161.842.409 1.246.245.398.535.711.71.891 2.97 3.065 4.183 4.289 4.881 4.974.698-.685 1.912-1.91 4.882-4.974.174-.18.464-.493.71-.891.247-.404.408-.83.408-1.246a2.73 2.73 0 0 0-.586-1.68C13.04 3.367 12.45 3 11.5 3c-.375 0-.739.06-1.148.267-.42.213-.94.609-1.574 1.362a.998.998 0 0 1-1.208.274.994.994 0 0 1-.348-.274Z"[39m
                [33mfill-rule[39m=[32m"evenodd"[39m
              [36m/>[39m
            [36m</symbol>[39m
          [36m</defs>[39m
          [36m<use[39m
            [33mhref[39m=[32m"#icon-heart-16"[39m
          [36m/>[39m
        [36m</svg>[39m
      [36m</button>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m"section-title__cta"[39m
    [36m>[39m
      [36m<a[39m
        [33mhref[39m=[32m"https://www.ebay.com"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"section-title__cta-text"[39m
        [36m>[39m
          [0mSee All[0m
        [36m</span>[39m
      [36m</a>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`section-title > renders with cta custom text 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"section-title"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m"section-title__title-container"[39m
    [36m>[39m
      [36m<h2[39m
        [33mclass[39m=[32m"section-title__title"[39m
        [33mid[39m=[32m"s0-title"[39m
      [36m>[39m
        [0mTodays Best Deals[0m
      [36m</h2>[39m
      [36m<span[39m
        [33mclass[39m=[32m"section-title__subtitle"[39m
      [36m>[39m
        [0mwith free shipping![0m
      [36m</span>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m"section-title__cta"[39m
    [36m>[39m
      [36m<a[39m
        [33mhref[39m=[32m"www.ebay.com"[39m
      [36m>[39m
        [36m<span[39m
          [33mclass[39m=[32m"section-title__cta-text"[39m
        [36m>[39m
          [0mCustom Text[0m
        [36m</span>[39m
      [36m</a>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`section-title > renders with no subtitle 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"section-title"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m"section-title__title-container"[39m
    [36m>[39m
      [36m<h2[39m
        [33mclass[39m=[32m"section-title__title"[39m
        [33mid[39m=[32m"s0-title"[39m
      [36m>[39m
        [0mTodays Best Deals[0m
      [36m</h2>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`section-title > renders with overflow 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"section-title"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m"section-title__title-container"[39m
    [36m>[39m
      [36m<h2[39m
        [33mclass[39m=[32m"section-title__title"[39m
        [33mid[39m=[32m"s0-0-title"[39m
      [36m>[39m
        [0mToday's Deals - All With Free Shipping[0m
      [36m</h2>[39m
      [36m<span[39m
        [33mclass[39m=[32m"section-title__subtitle"[39m
      [36m>[39m
        [0mPlus, guaranteed best prices.[0m
      [36m</span>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m"section-title__overflow"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"menu-button"[39m
      [36m>[39m
        [36m<button[39m
          [33maria-expanded[39m=[32m"false"[39m
          [33maria-haspopup[39m=[32m"true"[39m
          [33maria-label[39m=[32m"eBay Menu"[39m
          [33mclass[39m=[32m"menu-button__button icon-btn"[39m
          [33mdata-ebayui[39m=[32m""[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-overflow-vertical-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33md[39m=[32m"M8 4.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Zm0 10a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3ZM9.5 8a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-overflow-vertical-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</button>[39m
        [36m<span[39m
          [33mclass[39m=[32m"menu-button__menu"[39m
          [33mtabindex[39m=[32m"-1"[39m
        [36m>[39m
          [36m<div[39m
            [33mclass[39m=[32m"menu-button__items"[39m
            [33mid[39m=[32m"s0-0-11-1-@content-menu"[39m
            [33mrole[39m=[32m"menu"[39m
          [36m>[39m
            [36m<div[39m
              [33mclass[39m=[32m"menu-button__item"[39m
              [33mrole[39m=[32m"menuitem"[39m
            [36m>[39m
              [36m<span>[39m
                [0mitem 1[0m
              [36m</span>[39m
              [36m<svg[39m
                [33maria-hidden[39m=[32m"true"[39m
                [33mclass[39m=[32m"icon icon--16"[39m
                [33mfocusable[39m=[32m"false"[39m
              [36m>[39m
                [36m<defs>[39m
                  [36m<symbol[39m
                    [33mid[39m=[32m"icon-tick-16"[39m
                    [33mviewBox[39m=[32m"0 0 16 16"[39m
                  [36m>[39m
                    [36m<path[39m
                      [33mclip-rule[39m=[32m"evenodd"[39m
                      [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                      [33mfill-rule[39m=[32m"evenodd"[39m
                    [36m/>[39m
                  [36m</symbol>[39m
                [36m</defs>[39m
                [36m<use[39m
                  [33mhref[39m=[32m"#icon-tick-16"[39m
                [36m/>[39m
              [36m</svg>[39m
            [36m</div>[39m
            [36m<div[39m
              [33mclass[39m=[32m"menu-button__item"[39m
              [33mrole[39m=[32m"menuitem"[39m
            [36m>[39m
              [36m<span>[39m
                [0mitem 2[0m
              [36m</span>[39m
              [36m<svg[39m
                [33maria-hidden[39m=[32m"true"[39m
                [33mclass[39m=[32m"icon icon--16"[39m
                [33mfocusable[39m=[32m"false"[39m
              [36m>[39m
                [36m<use[39m
                  [33mhref[39m=[32m"#icon-tick-16"[39m
                [36m/>[39m
              [36m</svg>[39m
            [36m</div>[39m
            [36m<div[39m
              [33mclass[39m=[32m"menu-button__item"[39m
              [33mrole[39m=[32m"menuitem"[39m
            [36m>[39m
              [36m<span>[39m
                [0mitem 3[0m
              [36m</span>[39m
              [36m<svg[39m
                [33maria-hidden[39m=[32m"true"[39m
                [33mclass[39m=[32m"icon icon--16"[39m
                [33mfocusable[39m=[32m"false"[39m
              [36m>[39m
                [36m<use[39m
                  [33mhref[39m=[32m"#icon-tick-16"[39m
                [36m/>[39m
              [36m</svg>[39m
            [36m</div>[39m
          [36m</div>[39m
        [36m</span>[39m
      [36m</span>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`section-title > renders with overflow and no subtitle 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"section-title"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m"section-title__title-container"[39m
    [36m>[39m
      [36m<h2[39m
        [33mclass[39m=[32m"section-title__title"[39m
        [33mid[39m=[32m"s0-0-title"[39m
      [36m>[39m
        [0mToday's Deals - All With Free Shipping[0m
      [36m</h2>[39m
      [36m<span[39m
        [33mclass[39m=[32m"section-title__subtitle"[39m
      [36m>[39m
        [0mPlus, guaranteed best prices.[0m
      [36m</span>[39m
    [36m</div>[39m
    [36m<div[39m
      [33mclass[39m=[32m"section-title__overflow"[39m
    [36m>[39m
      [36m<span[39m
        [33mclass[39m=[32m"menu-button"[39m
      [36m>[39m
        [36m<button[39m
          [33maria-expanded[39m=[32m"false"[39m
          [33maria-haspopup[39m=[32m"true"[39m
          [33maria-label[39m=[32m"eBay Menu"[39m
          [33mclass[39m=[32m"menu-button__button icon-btn"[39m
          [33mdata-ebayui[39m=[32m""[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-overflow-vertical-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33md[39m=[32m"M8 4.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Zm0 10a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3ZM9.5 8a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-overflow-vertical-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</button>[39m
        [36m<span[39m
          [33mclass[39m=[32m"menu-button__menu"[39m
          [33mtabindex[39m=[32m"-1"[39m
        [36m>[39m
          [36m<div[39m
            [33mclass[39m=[32m"menu-button__items"[39m
            [33mid[39m=[32m"s0-0-11-1-@content-menu"[39m
            [33mrole[39m=[32m"menu"[39m
          [36m>[39m
            [36m<div[39m
              [33mclass[39m=[32m"menu-button__item"[39m
              [33mrole[39m=[32m"menuitem"[39m
            [36m>[39m
              [36m<span>[39m
                [0mitem 1[0m
              [36m</span>[39m
              [36m<svg[39m
                [33maria-hidden[39m=[32m"true"[39m
                [33mclass[39m=[32m"icon icon--16"[39m
                [33mfocusable[39m=[32m"false"[39m
              [36m>[39m
                [36m<defs>[39m
                  [36m<symbol[39m
                    [33mid[39m=[32m"icon-tick-16"[39m
                    [33mviewBox[39m=[32m"0 0 16 16"[39m
                  [36m>[39m
                    [36m<path[39m
                      [33mclip-rule[39m=[32m"evenodd"[39m
                      [33md[39m=[32m"M13.707 5.707a1 1 0 0 0-1.414-1.414L6 10.586 3.707 8.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"[39m
                      [33mfill-rule[39m=[32m"evenodd"[39m
                    [36m/>[39m
                  [36m</symbol>[39m
                [36m</defs>[39m
                [36m<use[39m
                  [33mhref[39m=[32m"#icon-tick-16"[39m
                [36m/>[39m
              [36m</svg>[39m
            [36m</div>[39m
            [36m<div[39m
              [33mclass[39m=[32m"menu-button__item"[39m
              [33mrole[39m=[32m"menuitem"[39m
            [36m>[39m
              [36m<span>[39m
                [0mitem 2[0m
              [36m</span>[39m
              [36m<svg[39m
                [33maria-hidden[39m=[32m"true"[39m
                [33mclass[39m=[32m"icon icon--16"[39m
                [33mfocusable[39m=[32m"false"[39m
              [36m>[39m
                [36m<use[39m
                  [33mhref[39m=[32m"#icon-tick-16"[39m
                [36m/>[39m
              [36m</svg>[39m
            [36m</div>[39m
            [36m<div[39m
              [33mclass[39m=[32m"menu-button__item"[39m
              [33mrole[39m=[32m"menuitem"[39m
            [36m>[39m
              [36m<span>[39m
                [0mitem 3[0m
              [36m</span>[39m
              [36m<svg[39m
                [33maria-hidden[39m=[32m"true"[39m
                [33mclass[39m=[32m"icon icon--16"[39m
                [33mfocusable[39m=[32m"false"[39m
              [36m>[39m
                [36m<use[39m
                  [33mhref[39m=[32m"#icon-tick-16"[39m
                [36m/>[39m
              [36m</svg>[39m
            [36m</div>[39m
          [36m</div>[39m
        [36m</span>[39m
      [36m</span>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;
